use erb for mails

--- a/app/views/validation_mailer/validate_mail.text.erb
+++ b/app/views/validation_mailer/validate_mail.text.erb
@@ -1,6 +1,6 @@
-Hallo #{@person.name},
+Hallo <%= @person.name %>,
 
 
 Bitte bestätige deine Teilnahme am Wichteln in dem du folgende URL aufrufst:
 
-= public_confirm_url(@token.code)
+<%= public_confirm_url(@token.code) %>
